k8s/pinepods/valkey.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: valkey
  namespace: pinepods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: valkey
  template:
    metadata:
      labels:
        app: valkey
    spec:
      automountServiceAccountToken: false
      enableServiceLinks: false
      nodeSelector:
        johto.narwhal-snapper-ts.net/workload: media
      containers:
        - name: valkey
          image: valkey/valkey:9-alpine@sha256:48332870af354a799964c0012ae1194a0bf2bf894eb508f945810596dc2d8d11
          ports:
            - name: valkey
              containerPort: 6379
          readinessProbe:
            tcpSocket:
              port: valkey
          livenessProbe:
            tcpSocket:
              port: valkey
          volumeMounts:
            - name: data
              mountPath: /data
      volumes:
        - name: data
          emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: valkey
  namespace: pinepods
spec:
  selector:
    app: valkey
  ports:
    - name: valkey
      port: 6379
      targetPort: valkey
