k8s/pinepods/workload.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pinepods
  namespace: pinepods
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pinepods
  template:
    metadata:
      labels:
        app: pinepods
    spec:
      enableServiceLinks: false
      nodeSelector:
        johto.narwhal-snapper-ts.net/workload: media
      securityContext:
        fsGroup: 911
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: pinepods
          image: madeofpendletonwool/pinepods:0.9.0@sha256:ebc258bb0c62cdb69e5fb726b247c885dac19b50d06fed68fa8d37197b88ace4
          ports:
            - name: http
              containerPort: 8040
          readinessProbe:
            httpGet:
              path: /
              port: http
          livenessProbe:
            httpGet:
              path: /
              port: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 1Gi
          volumeMounts:
            - name: backups
              mountPath: /opt/pinepods/backups
            - name: downloads
              mountPath: /opt/pinepods/downloads
            - name: local-media
              mountPath: /opt/pinepods/local-media
      volumes:
        - name: backups
          hostPath:
            path: /mnt/Data/apps/pinepods/backups
            type: DirectoryOrCreate
        - name: downloads
          hostPath:
            path: /mnt/Data/apps/pinepods/downloads
            type: DirectoryOrCreate
        - name: local-media
          hostPath:
            path: /mnt/Data/apps/pinepods/local-media
            type: DirectoryOrCreate
---
apiVersion: v1
kind: Service
metadata:
  name: pinepods
  namespace: pinepods
spec:
  selector:
    app: pinepods
  ports:
    - name: http
      port: 80
      targetPort: http
